# zizzania

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  config.Makefile  debug.h  dispatcher.c  dispatcher.h  dissectors.c  dissectors.h  handshake.c  handshake.h  killer.c  killer.h  main.c  zizzania.c  zizzania.h
lib/: debug.h  dispatcher.c  dispatcher.h  dissectors.c  dissectors.h  handshake.c  handshake.h  killer.c  killer.h  zizzania.c  zizzania.h
src/: CMakeLists.txt  SConstruct  bsss.c  bsss.h  clients.c  clients.h  dispatcher.c  dispatcher.h  dissector.c  dissector.h  endian.h  handler.c  handler.h  handshake.c  handshake.h  ieee802.c  ieee802.h  iface.c  iface.h  killer.c  killer.h  main.c  members.c  members.h  options.c  options.h  params.h  release.h  terminal.c  terminal.h  util.c  util.h
tools/: README.md  channel-hop.sh  channel.sh  managed.sh  monitor.sh  scan.sh  zz-channel  zz-channel-hop  zz-monitor  zz-scan
